# treacode

./: .gitignore  CHANGELOG.md  README.md  debug_minute.py  main.py  pyproject.toml  test_check_data.py  test_tdx_detailed.py  test_tdx_reader.py
.trae/documents/: 数据获取层实现计划.md
.trae/rules/: git-commit-message.md
config/: .env.example  config.yaml
src/quant/: __init__.py  backtest.py  data.py  strategy.py
src/quant/datasources/: __init__.py  tdx_cache.py  tdx_reader.py
